# auto-grading-system

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.tunnel  LICENSE  Makefile  README.md  celery_worker.py  docker-compose.yml  questions.txt  setup.bat  start_tunnel.bat
__recycle_bin/: forum_emoji_rollback_notice.txt
__recycle_bin/forum_emoji/: forum_emoji_dir_deleted.txt  migrate_emoji_json_to_db.py
docs/: DATABASE_MIGRATION.md
grader/: CMakeLists.txt
grader/include/: common.h
grader/src/: add_questions.c  cli_exam.c  cli_history.c  cli_utils.c  get_answer.c  get_data.c  grading.c  main.c  put_questions.c
include/: common.h
scripts/: deploy_local.ps1  deploy_public.ps1  drop_emoji_tables.sql  migrate_to_postgres.py
src/: add_questions.c  get_answer.c  get_data.c  grading.c  main.c  put_questions.c
text_analyzer/: CMakeLists.txt  testfile.txt
text_analyzer/cli/: main.c
text_analyzer/dict/Chinese/: sensitive_words_cn.txt
text_analyzer/dict/English/: sensitive_words_en.txt
text_analyzer/include/: analyzer.h  analyzer_common.h  common.h  dict.h  trie.h  utils.h
text_analyzer/src/: analyzer.c  dict.c  list.c  main.c  trie.c  utils.c
web/: FlaskMigrate_Docker_说明.txt  __init__.py  app.py  celery_utils.py  config.py  extensions.py  forum_routes.py  models.py  requirements.txt  tasks.py  wait_for_db.py  wsgi.py
web/blueprints/: __init__.py  admin.py  auth.py  exam.py  forum.py  main.py
web/instance/: data.db  data.db-shm  data.db-wal
web/services/: grading.py
web/templates/: 404.html  500.html  add.html  admin_user_detail.html  admin_users.html  base.html  edit.html  exam.html  history.html  index.html  leaderboard.html  login.html  manage.html  profile.html  register.html  result.html  select_set.html  user_profile.html  waiting.html
web/templates/forum/: admin.html  (+4 more)
web/utils/: data_manager.py  queue_manager.py  render_utils.py
(+6 files in other folders)
